# ivLyrics

./: .gitignore  AIAddonManager.js  AddonList.json  Addon_AI_ChatGPT.js  Addon_AI_Claude.js  Addon_AI_Gemini.js  Addon_AI_Groq.js  Addon_AI_OpenRouter.js  Addon_AI_Perplexity.js  Addon_AI_Pollinations.js  Addon_Lyrics_BetterLyricsEngine.js  Addon_Lyrics_Lrclib.js  Addon_Lyrics_Spotify.js  CommunityVideoSelector.js  FullscreenOverlay.js  GlobalShortcuts.js  I18n.js  LyricsAddonManager.js  LyricsService.js  LyricsShareImage.js  MARKETPLACE.md  Marketplace.js  MarketplaceManager.js  NoticeSystem.js  NowPlayingPanelLyrics.js  OptionsMenu.js  Pages.js  PlaybarButton.js  README.md  README_EN.md  Settings.js  SettingsObject.js  SetupWizard.js  SongInfoTicker.js  SyncDataCreator.js  TabBar.js  Utils.js  VideoBackground.js  VideoBackgroundDepend.js  VideoHelperService.js  (+5 more)
cubey-helper/: CMakeLists.txt  install-protocol.ps1  start-cubey-helper.ps1
cubey-helper/include/: auth_window.h  cubey_api.h  session_store.h  winhttp_client.h
cubey-helper/src/: auth_window.cpp  cubey_api.cpp  main.cpp  session_store.cpp  winhttp_client.cpp
langs/: LangAr.js  LangBn.js  LangDe.js  LangEn.js  LangEs.js  LangFa.js  LangFr.js  LangHi.js  LangId.js  LangIt.js  LangJa.js  LangKo.js  LangPt.js  LangRu.js  LangTh.js  LangVi.js  LangZhCN.js  LangZhTW.js
